# scaphandre

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION  CNAME  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUNDING.yml  Makefile  NOTES.md  README.md  artifacts.json  book.toml  build.rs  changelog.rss  config.toml  index.html  init.sh  oranda-v0.6.1.css  oranda.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bloat-test.yml  build-and-test.yml  codesee-arch-diagram.yml  debian-release.yml  docker-release.yml  exe-release-prometheuspush.yml  exe-release.yml  helm-release.yml  oranda.yml  python_build.yml  rpm-release-prometheuspush.yml  rpm-release.yml  rust.yml  windows-release.yml
artifacts/: index.html
automation/ansible/: install-configure-prometheuspush-rhel.yml  inventory
book/: 404.html  book.js  compatibility.html  contributing.html  index.html  introduction.html  oranda-highlight.css  print.html  searchindex.js  searchindex.json  sources.html  troubleshooting.html  why.html
book/css/: chrome.css  general.css  variables.css
book/explanations/: about-containers.html  host_metrics.html  how-scaph-computes-per-process-power-consumption.html  internal-structure.html  overview.html  rapl-domains.html
book/fonts/: fonts.css
book/how-to_guides/: get-process-level-power-in-grafana.html  install-prometheuspush-only-rhel.html  overview.html  propagate-metrics-hypervisor-to-vm_qemu-kvm.html
book/references/: exporter-json.html  exporter-prometheus.html  exporter-prometheuspush.html  exporter-qemu.html  exporter-riemann.html  exporter-stdout.html  exporter-warp10.html  metrics.html  overview.html  sensor-msr_rapl.html  sensor-powercap_rapl.html
book/tutorials/: compilation-linux.html  compilation-windows.html  docker-compose.html  getting_started.html  grafana-helm-values.yaml  grafana-kubernetes-dashboard.json  installation-linux.html  installation-windows.html  installation.html  kubernetes.html  overview.html  quickstart.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.1.1/: index.html
changelog/v0.2.0/: index.html
changelog/v0.3.0/: index.html
changelog/v0.4.0/: index.html
changelog/v0.4.1/: index.html
changelog/v0.5.0/: index.html
changelog/v1.0.0/: index.html
changelog/v1.0.2/: index.html
data/disks/: power_model.csv
docker-compose/: docker-compose-dev.yaml  docker-compose.yaml  sample.jsonnet
docker-compose/dashboards/: sample-dashboard.json
docker-compose/grafana/: Dockerfile  dashboards.yml  datasource.yml  sample-dashboard.json
docker-compose/prom/: Dockerfile  prometheus.yml
docker-compose/prom-dev/: prometheus.yml
docs/: 404.html  README.md  SUMMARY.md  compatibility.html  contributing.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json  sources.html  sources.md  troubleshooting.html  why.html  why.md
docs/explanations/: about-containers.html  how-scaph-computes-per-process-power-consumption.html  internal-structure.html  overview.html
docs/exporters/: README.md  prometheus.md  qemu.md  stdout.md
docs/how-to_guides/: get-process-level-power-in-grafana.html  measure-containers-power.html  overview.html  propagate-metrics-hypervisor-to-vm_qemu-kvm.html  propagate-metrics-hypervisor-to-vm_qemu-kvm.md
docs/references/: exporter-json.html  exporter-prometheus.html  exporter-qemu.html  exporter-qemu.md  exporter-riemann.html  exporter-stdout.html  exporter-warp10.html  overview.html  sensor-powercap_rapl.html
docs/sensors/: README.md  powercap_rapl.md
docs/tutorials/: installation.html  kubernetes.html  overview.html  quickstart.html  quickstart.md  warpview.html
docs_src/: README.md  SUMMARY.md  compatibility.md  contributing.md  introduction.md  troubleshooting.md  why.md
docs_src/explanations/: about-containers.md  host_metrics.md  how-scaph-computes-per-process-power-consumption.md  internal-structure.md  overview.md  rapl-domains.md  redis-exporter-sensor.md
docs_src/how-to_guides/: get-process-level-power-in-grafana.md  how-to-implement-a-new-sensor.md  install-prometheuspush-only-rhel.md  measure-containers-power.md  propagate-metrics-hypervisor-to-vm_qemu-kvm.md
docs_src/references/: exporter-json.md  exporter-prometheus.md  exporter-prometheuspush.md  exporter-qemu-redis.md  exporter-qemu.md  exporter-riemann.md  exporter-stdout.md  exporter-warp10.md  metrics.md  overview.md  sensor-msr_rapl.md  sensor-powercap_rapl.md  sensor-redis.md  stdout-qemu.md
docs_src/tutorials/: compilation-linux.md  compilation-linux.nmd  compilation-windows.md  compilation_linux.md  docker-compose.md  getting_started  getting_started.md  installation-linux.md  installation-windows.md  installation.md  installation_linux  kubernetes.md  overview.md  quickstart.md
funding/: index.html
helm/scaphandre/: Chart.yaml  values.yaml
helm/scaphandre/templates/: _helpers.tpl  daemonset.yaml  psp.yaml  rbac.yaml  service-account.yaml  service.yaml  servicemonitor.yaml
hubblo/: index.hbs
hubblo/css/: chrome.css  general.css  variables.css
hubblo/fonts/: fonts.css
packaging/linux/redhat/: scaphandre-prometheuspush.service  scaphandre.service
packaging/windows/: dev_installer.iss  installer.iss  register_log_source.ps1
python/: .gitignore  Cargo.toml  Makefile  pyproject.toml
python/docs/source/: api_reference.rst  conf.py  index.rst
python/scaphandre/: sensors.py
python/src/: lib.rs
python/stubs/scaphandre/: scaphandre.pyi
python/tests/: test_scaphandre.py
sample-stack/: docker-compose.yaml
src/: errors.rs  lib.rs  main.rs  tests.rs
src/exporters/: datadog.rs  elastic.rs  json.rs  mod.rs  prometheus.rs  prometheuspush.rs  qemu.rs  qemu_redis.rs  riemann.rs  stdout.rs  utils.rs  warpten.rs
src/sensors/: debug.rs  disk.rs  mod.rs  msr_rapl.rs  powercap_rapl.rs  redis.rs  socket.rs  units.rs  utils.rs
tests/: common.rs  disk.rs  integration.rs  utils.rs  xeon-bisocket.txt
tests/fixtures/: disk_power.csv
theme/: index.hbs
(+4 files in other folders)
