[package]
name = "scaphandre"
version = "0.4.1"
authors = ["Benoit Petit <bpetit@hubblo.org>"]
edition = "2018"
license = "Apache-2.0"
description = "Electrical power consumption measurement agent."
repository = "https://github.com/hubblo-org/scaphandre"
readme = "README.md"
homepage = "https://hubblo-org.github.io/scaphandre-documentation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loggerv = "0.7.2"
log = "0.4"
clap = "2.33.3"
regex = "1"
procfs = "0.8.1"
riemann_client = { version = "0.9.0", optional = true }
hostname = "0.3.1"
protobuf = "2.20.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
warp10 = { version = "1.0.0", optional = true }
time = "0.2.25"
colored = "2.0.0"
chrono = "0.4.19"
docker-sync = { version = "0.1.2", optional = true }
#docker-sync = { path = "../rs-docker-sync", optional = true }
k8s-sync = { version = "0.2.3", optional = true }
#k8s-sync = { path = "../rs-k8s-sync", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
tokio = { version = "1", features = ["full"], optional = true}

[features]
default = ["prometheus", "riemann", "warp10", "containers", "json"]
prometheus = ["hyper", "tokio"]
riemann = ["riemann_client"]
json = ["serde", "serde_json"]
containers = ["docker-sync", "k8s-sync"]
