[package]
name = "scaphandre"
version = "1.0.0"
authors = ["Benoit Petit <bpetit@hubblo.org>"]
edition = "2021"
license = "Apache-2.0"
description = "Electric power/energy consumption monitoring agent."
repository = "https://github.com/hubblo-org/scaphandre"
readme = "README.md"
homepage = "https://scaphandre.hubblo.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loggerv = "0.7"
log = "0.4"
clap = { version = "4.2", features = ["cargo", "derive"] }
regex = "1.7"
riemann_client = { version = "0.9.0", optional = true }
hostname = "0.3.1"
protobuf = "2.28.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
ordered-float = "2.0"
warp10 = { version = "2.0.0", optional = true }
rand = { version = "0.7.3" }
time = "0.3"
colored = "2.0"
chrono = "0.4"
docker-sync = { version = "0.1.2", optional = true }
k8s-sync = { version = "0.2.3", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
tokio = { version = "1.26.0", features = ["full"], optional = true}
sysinfo = { version = "0.28.3"}
isahc = { version = "1.7.2", optional = true }

[target.'cfg(target_os="linux")'.dependencies]
procfs = { version = "0.15.0" }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.27.0", features = ["alloc","Win32_Storage_FileSystem","Win32_Foundation","Win32_Security","Win32_System_IO","Win32_System_Ioctl","Win32_System_Threading", "Win32_System_SystemInformation"]}
windows-service = { version = "0.6.0" }
raw-cpuid = { version = "10.5.0" }
core_affinity = { version = "0.8.1"}
x86 = { version = "0.52.0" }

[features]
default = ["prometheus", "riemann", "warpten", "json", "containers", "prometheuspush"]
prometheus = ["hyper", "tokio"]
riemann = ["riemann_client"]
json = ["serde", "serde_json"]
containers = ["docker-sync", "k8s-sync"]
warpten = ["warp10"]
prometheuspush = ["isahc"]
qemu = []
