[package]
name = "scaphandre-python"
version = "0.1.0"
authors = ["fvaleye@github.com"]
homepage = "https://hubblo-org.github.io/scaphandre-documentation"
license = "Apache-2.0"
description = "Electrical power consumption measurement agent."
readme = "README.md"
edition = "2021"
keywords = ["energy", "sustainability", "measure", "virtual-machine", "energy-monitor", "electricity", "virtual-machines", "energy-consumption",  "electricity-consumption", "energy-efficiency", "carbon-footprint"]

[lib]
name = "scaphandre"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0"

[dependencies.pyo3]
version = "0.16"
features = ["extension-module", "abi3", "abi3-py37"]

[dependencies.scaphandre]
path = "../"
version = "0"