[build-system]
requires = ["maturin==0.12.20"]
build-backend = "maturin"

[project]
name = "scaphandre"
description = "Electrical power consumption measurement agent."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7"
keywords = ["energy", "sustainability", "measure", "virtual-machine", "energy-monitor", "electricity", "virtual-machines", "energy-consumption",  "electricity-consumption", "energy-efficiency", "carbon-footprint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = []

[project.optional-dependencies]
devel = [
    "mypy",
    "black",
    "isort",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "sphinx",
    "sphinx-rtd-theme",
    "toml",
]

[project.urls]
documentation = "https://hubblo-org.github.io/scaphandre-documentation"
repository = "https://github.com/hubblo-org/scaphandre"

[tool.mypy]
files = "scaphandre/*.py"
exclude = "^tests"
mypy_path = "./stubs"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
implicit_reexport = false
strict_equality = true

[tool.isort]
profile = "black"
src_paths = ["scaphandre", "tests"]

[tool.black]
include = '\.pyi?$'
exclude = "venv"